# tcaml

./: README.md  dune-project  tcaml.opam
lib/: dune  env.ml  environment.ml  expr.ml  lexer.ml  parser.ml  value.ml
src/: dune  eval.ml  lexer.mll  main.ml  parser.mly  syntax.ml  type.ml
test/: dune  eval_test.ml  lexer_test.ml  tcaml_test.ml  test_main.ml
